--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,12 @@ html {
     padding-bottom: 30px;
 }
 
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /*..................................................................................bg-colors*/
 
 .header-bg-color {
